gitops/analytics-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-analytics-service
  name: app-analytics-service
  namespace: analytics-service
spec:
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: app-analytics-service
  template:
    metadata:
      labels:
        app: app-analytics-service
    spec:
      containers:
        - name: app-analytics-service 
          image: ${ACCOUNT_ID}.dkr.ecr.us-east-1.amazonaws.com/togglemaster_analytics-service:1.0.0
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 5
            periodSeconds: 5
